--- a/SEA_Application/Views/Inventory/PrintAllInventoryByCategory.cshtml
+++ b/SEA_Application/Views/Inventory/PrintAllInventoryByCategory.cshtml
@@ -27,9 +27,9 @@
                         <tr>
 
 
-                            <th> Product Name</th>
-                            <th> Product No</th>
-                            <th>Available Quantity</th>
+                            <th style="width:60%"> Product Name</th>
+                            <th style="width:20%"> Product No</th>
+                            <th style="width:20%">Available Quantity</th>
 
                         </tr>
 
@@ -43,11 +43,11 @@
                         <tr>
 
 
-                            <td>@inventory.Name</td>
+                            <td style="width:60%">@inventory.Name</td>
 
-                            <td>@inventory.ItemNo</td>
+                            <td style="width:20%">@inventory.ItemNo</td>
 
-                            <td>@inventory.QuantityOnHand</td>
+                            <td style="width:20%">@inventory.QuantityOnHand</td>
                         </tr>
 
 
