--- a/SEA_Application/Views/Sales/Index.cshtml
+++ b/SEA_Application/Views/Sales/Index.cshtml
@@ -130,7 +130,7 @@
                 });
                 table.fnDraw();
 
-                var AllTds = $("tr td:nth-child(4) td:nth-child(5)");
+                var AllTds = $("tr td:nth-child(4),td:nth-child(5)");
 
                 for (var i = 0; i < AllTds.length; i++) {
 
