--- a/SEA_Application/Views/Shared/_CashierDashboardLayout.cshtml
+++ b/SEA_Application/Views/Shared/_CashierDashboardLayout.cshtml
@@ -117,7 +117,7 @@
                     <li id="CashierSale" class="nav-item">
 
                         <a href="@Url.Action("Index", "Sales" )" class="nav-link nav-toggle">
-                            <i class="fal fa-books"></i>
+                            <i class="fal fa-shopping-basket"></i>
                             <p>Sales</p>
                         </a>
                     </li>
