--- a/SEA_Application/Views/Sales/Summary.cshtml
+++ b/SEA_Application/Views/Sales/Summary.cshtml
@@ -155,6 +155,15 @@ else if (User.IsInRole("Cashier"))
 
                 $("#SaleReport").append("<tr> <td >Grand Total</td><td></td>   <td></td> <td>" + GrandTotal + "</td><td>-" + DiscountTotal + "</td><td>" + GrandTotalDiscounted + "</td></tr>")
 
+                var AllTds = $("td:nth-child(4),td:nth-child(5),td:nth-child(6)");
+
+                for (var i = 0; i < AllTds.length; i++) {
+
+                    var CommaSeparatedValue = numberWithCommas(AllTds[i].innerHTML);
+
+                    AllTds[i].innerHTML = CommaSeparatedValue;
+                }
+
 
             }
         })
@@ -276,7 +285,7 @@ else if (User.IsInRole("Cashier"))
             newWin.document.close();
             setTimeout(function () { newWin.close(); }, 10);
 
-        })
+        })//print notes
 
     })
 
@@ -324,6 +333,16 @@ else if (User.IsInRole("Cashier"))
                 $("#SaleReport").append("<tr> <td >Grand Total</td> <td></td>  <td></td> <td>" + GrandTotal + "</td><td>" + DiscountTotal + "</td><td>" + GrandTotalDiscounted + "</td></tr>")
 
 
+
+                var AllTds = $("td:nth-child(4),td:nth-child(5),td:nth-child(6)");
+
+                for (var i = 0; i < AllTds.length; i++) {
+
+                    var CommaSeparatedValue = numberWithCommas(AllTds[i].innerHTML);
+
+                    AllTds[i].innerHTML = CommaSeparatedValue;
+                }
+
             }
         })
 
@@ -339,5 +358,10 @@ else if (User.IsInRole("Cashier"))
     function GetMonthName(monthNumber) {
         var months = ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December'];
         return months[monthNumber - 1];
+    }
+
+    function numberWithCommas(x) {
+        debugger
+        return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
     }
 </script>
