--- a/SEA_Application/Views/Shared/_AdminDashboardLayout.cshtml
+++ b/SEA_Application/Views/Shared/_AdminDashboardLayout.cshtml
@@ -310,8 +310,8 @@
 
                     <li id="Suppliers" class="nav-item">
                         <a href="@Url.Action("Index", "Suppliers" )" class="nav-link nav-toggle">
-                            <i class="sea-dash">
-                                <img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/Icon-Students.png" alt="">
+                            <i class="fal fa-users">
+                            
                             </i>
                             <p>Suppliers</p>
                         </a>
@@ -345,8 +345,9 @@
 
                     <li id="Inventory" class="nav-item">
                         <a href="@Url.Action("Inventory", "Inventory" )" class="nav-link nav-toggle">
-                            <i class="sea-dash">
-                                <img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/Icon-Students.png" alt="">
+                            <i class=" fal  fas fa-inventory">
+                                @*<img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/Icon-Students.png" alt="">*@
+
                             </i>
                             <p>Inventory</p>
                         </a>
@@ -355,8 +356,9 @@
 
                     <li id="PurchaseOrders" class="nav-item">
                         <a href="@Url.Action("PurchaseOrdersList", "Inventory" )" class="nav-link nav-toggle">
-                            <i class="sea-dash">
-                                <img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/Icon-Students.png" alt="">
+                            <i class="fal fa-shopping-cart">
+                                @*<img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/Icon-Students.png" alt="">*@
+                            
                             </i>
                             <p>Purchase Orders</p>
                         </a>
@@ -373,9 +375,10 @@
         </li>*@
 
                     <li id="SalesSummaryAdmin" class="nav-item">
-                        <a href="@Url.Action("Summary", "Sales" )" class="nav-link nav-toggle">
-                            <i class="sea-dash">
-                                <img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/Icon-Students.png" alt="">
+                        <a  href="@Url.Action("Summary", "Sales" )" class="nav-link nav-toggle">
+                            <i class="fal fa-abacus">
+                                @*<img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/Icon-Students.png" alt="">*@
+                            
                             </i>
                             <p>Sales Summary </p>
                         </a>
